--- a/home.css
+++ b/home.css
@@ -48,8 +48,30 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Rubik', sans-serif;
 }
 
-#carouselProjectIndicators {
+#carouselAutoPilotIndicators {
 	max-width: 480px !important;
+}
+
+#carouselChatIndicators {
+	min-width: 480px !important;
+	max-height: 494px !important;
+	min-height: 494px !important;
+}
+
+#carouselControlChatPrev {
+ background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+#carouselControlChatNext {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+
+#carouselIndicatorChat li {
+    background-color: #757575;
+}
+
+#carouselIndicatorChat .active {
+    background-color: #000;
 }
 /* End Bootstrap Override */
 
