--- a/css/home.css
+++ b/css/home.css
@@ -122,7 +122,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .parallaxSkill {
     /* The image used */
-    background-image: url("https://images.unsplash.com/photo-1520531158340-44015069e78e?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=e8e1834e861a1f2eefcc8cc3622af6c9&auto=format&fit=crop&w=1438&q=80");
+    background-image: url("https://i.imgur.com/XYEsBvp.jpg");
     /* Set a specific height */
     /* Create the parallax scrolling effect */
 	#background-color: #f2f2f2;
@@ -424,9 +424,72 @@ button.close-modal {
 }
 /*Modal CSS End*/
 /*End Font and Styling*/
-
+.mobileParallax{
+	display: none !important;
+}
 /*responsive media*/
+@media screen
+    and (max-width : 414px) {
+		.projectModalHeaders{
+	  	  font-size: 3vh;
+	    }
+	    .projectModalHeadersClass{
+	  	  font-size: 3vh;
+	    }
+	    #carouselChatIndicators{
+	  	  min-width: 0px !important;
+	    }
+	    .modal-box{
+	  	  width: 95% !important;
+	    }
+	    .socialMedia{
+	  	 display:flex !important;
+	  	 justify-content:center !important;
+	  	 align-items:center !important;
+	    }
+	    .parallaxCover {
+	        /* The image used */
+	    	background-image: url("https://i.imgur.com/Sfv021j.jpg");
+			image-rendering: -webkit-optimize-contrast;
+	        /* Set a specific height */
+	        /* Create the parallax scrolling effect */
+			display: none !important;
+	    	min-height: 110vh;
+	    }
+	    .parallaxSkill {
+	  	/* The image used */
+		display: none !important;
+		background-image: url("https://i.imgur.com/rlWkyXq.jpg");
+		image-rendering: -webkit-optimize-contrast;
+	  	/* Set a specific height */
+	  	/* Create the parallax scrolling effect */
 
+	  	min-height: 105vh;
+	    }
+		.mobileParallax {
+	        /* The image used */
+	    	background-image: url("https://i.imgur.com/Sfv021j.jpg");
+			image-rendering: -webkit-optimize-contrast;
+	        /* Set a specific height */
+	        /* Create the parallax scrolling effect */
+			display: block !important;
+			background-repeat: no-repeat;
+	    	min-height: 110vh;
+	    }
+		.parallaxSkillMobile{
+			/* The image used */
+		  background-image: url("https://i.imgur.com/rlWkyXq.jpg");
+		  image-rendering: -webkit-optimize-contrast;
+		  /* Set a specific height */
+		  /* Create the parallax scrolling effect */
+		  display: block !important;
+		  background-repeat: no-repeat;
+		  min-height: 110vh;
+
+		}
+	}
+
+}
 
 /*responsive media end*/
 
