--- a/css/home.css
+++ b/css/home.css
@@ -149,10 +149,13 @@ body {
     margin-bottom: 100px;
     margin-right: 100px;
 }
-
+.name{
+    color: #251717;
+}
 .parallaxCover {
     /* The image used */
 	background-image: url("https://i.imgur.com/hJDI7if.jpg");
+    /* background-image: url("https://i.imgur.com/21kD2g8.jpg"); */
     /* Set a specific height */
     /* Create the parallax scrolling effect */
 	background-size: cover;
@@ -321,24 +324,24 @@ body {
 }
 
 .paraText{
-	font-family: 'Anton', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 	color: #4c4c4c;
 }
 
 .projParaText{
-	font-family: 'Anton', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
     margin-left: 42%;
     margin-bottom: 10px;
 	color: #FFF;
 }
 
 .profParaText{
-    font-family: 'Anton', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     color: #FFF;
 }
 
 .paraTextGH{
-	font-family: 'Anton', sans-serif;
+	font-family: 'Ubuntu', sans-serif;
 	color: #637ee8;
 }
 
@@ -450,6 +453,7 @@ body {
 }
 .subHeader{
     font-size: 28px;
+    margin-left: 8px;
 }
 .modal-trigger, button {
   top: 50%;
@@ -470,6 +474,14 @@ body {
   -o-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
   transition: ease .2s;
+}
+
+.ubuntuFont{
+    font-family: 'Ubuntu', sans-serif;
+}
+
+.topCoverText{
+    margin-top: -258px;
 }
 
 button.close-modal {
