--- a/css/home.css
+++ b/css/home.css
@@ -2,7 +2,15 @@
     overflow: hidden;
 }
 
-/* Default & Bootstrap Override */
+body {
+  /* font-family: 'Open Sans', sans-serif; */
+    position: absolute;
+    min-width: 100%;
+    min-height: 100%;
+}
+/*********************************/
+/* Default & Bootstrap Override  */
+/*********************************/
 .progress{
     font-size: .8rem;
 }
@@ -25,30 +33,11 @@
 	margin-right: 0 !important;
 	margin-left: 0 !important;
 }
-.col-12{
+.col-12, .col-sm-6, .col-md-4, .col-xl-3, .col-12{
 	padding-left: 0px;
 	padding-right: 0px;
 }
 
-.col-sm-6{
-	padding-left: 0px;
-	padding-right: 0px;
-}
-
-.col-md-4{
-	padding-left: 0px;
-	padding-right: 0px;
-}
-
-.col-xl-3{
-	padding-left: 0px;
-	padding-right: 0px;
-}
-
-.col-12{
-	padding-left: 0px;
-	padding-right: 0px;
-}
 .flex-container {
   display: flex;
   flex-direction: row;
@@ -59,17 +48,10 @@
 .bg-secondary{
 	background-color: #4c4c4c !important;
 }
-body {
-  font-family: 'Open Sans', sans-serif;
-  position: absolute;
-    min-width: 100%;
-    min-height: 100%;
 
-
-}
-, h3, h4, h5, h6 {
+/* h3, h4, h5, h6 {
   font-family: 'Rubik', sans-serif;
-}
+} */
 
 #carouselAutoPilotIndicators {
 	max-width: 480px !important;
@@ -96,9 +78,13 @@ body {
 #carouselIndicatorChat .active {
     background-color: #000;
 }
+/*********************************/
 /* End Bootstrap Override */
+/*********************************/
 
-/* Effecs */
+/***********/
+/* Effecs  */
+/***********/
 .fadeInEffect3{
 	animation: fadein 3s;
 }
@@ -108,7 +94,6 @@ body {
 .fadeInEffect7{
 	animation: fadein 7s;
 }
-
 .fadeInEffect9{
 	animation: fadein 9s;
 }
@@ -125,34 +110,18 @@ body {
 	animation: fadein 20s;
 }
 
-
 @keyframes fadein {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
+/**************/
 /* End Effecs */
-.parallaxBottom{
+/**************/
 
-    background-image: url("https://images.unsplash.com/photo-1514238434711-667893ab79b6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80");
-    background-size: cover;
-	background-position: center;
-	background-attachment: fixed;
-	min-height: 100vh;
-}
-
-.profIcons{
-    color: #16bbb4;
-}
-
-#bottomBox{
-    margin-left: 100px;
-    margin-bottom: 100px;
-    margin-right: 100px;
-}
-.name{
-    color: #251717;
-}
-.parallaxCover {
+/**************/
+/* Parallax   */
+/**************/
+.parallaxTop {
     /* The image used */
 	background-image: url("https://i.imgur.com/hJDI7if.jpg");
     /* background-image: url("https://i.imgur.com/21kD2g8.jpg"); */
@@ -163,11 +132,9 @@ body {
 	background-attachment: fixed;
 	min-height: 110vh;
 }
-
 .parallaxSkill {
     /* The image used */
     /* background-image: url("https://i.imgur.com/XYEsBvp.jpg"); */
-
     /* background-image: url("https://images.unsplash.com/photo-1517021897933-0e0319cfbc28?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=719&q=80"); */
     background-image: url("https://i.imgur.com/jN0MjB7.jpg");
     /* Set a specific height */
@@ -179,10 +146,24 @@ body {
 	min-height: 105vh;
 }
 
-.parallaxSkill::before{
-     filter: grayscale(100%);
-}
+.parallaxBottom{
 
+    background-image: url("https://images.unsplash.com/photo-1514238434711-667893ab79b6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=634&q=80");
+    background-size: cover;
+	background-position: center;
+	background-attachment: fixed;
+	min-height: 100vh;
+}
+/*****************/
+/* Parallax End  */
+/*****************/
+
+/********/
+/* MISC */
+/********/
+.profIcons{
+    color: #16bbb4;
+}
 .skillmargin{
 	margin-bottom: 10px
 }
@@ -190,17 +171,102 @@ body {
 .skillBarPercent{
 	margin-left: 2px;
 }
-
 .topper{
 	margin-top: 10vh;
 }
-
-/*projectBoxesRowCOL*/
-.cardProjectImage{
-	opacity: .65;
+.shadowText{
+    text-shadow: #000 0px 0px 10px;
 }
 
-/*Hover CSS*/
+.shadowTextSM{
+    text-shadow: #000 0px 0px 5px;
+}
+.progressPercent{
+    margin-left: 10px;
+    color: #16bbb4;
+    font-family: 'Neuton', serif;
+}
+.paraText{
+	font-family: 'Ubuntu', sans-serif;
+	color: #4c4c4c;
+}
+.projParaText{
+	font-family: 'Ubuntu', sans-serif;
+    margin-left: 42%;
+    margin-bottom: 10px;
+	color: #FFF;
+}
+.profParaText{
+    font-family: 'Ubuntu', sans-serif;
+    color: #FFF;
+}
+.paraTextGH{
+	font-family: 'Ubuntu', sans-serif;
+	color: #637ee8;
+}
+.dateRange{
+	font-family: 'Cinzel', serif;
+}
+.contactIcon{
+	font-size: 2vh;
+	padding-left: 1vh;
+	padding-right: 1vh;
+}
+.list-inline{
+    margin: 0;
+    font-size: 11px;
+}
+.subHeader{
+    font-size: 28px;
+    margin-left: 8px;
+}
+.ubuntuFont{
+    font-family: 'Ubuntu', sans-serif;
+}
+
+#topCoverText{
+    margin-top: -258px;
+}
+
+#sectionSkillBar{
+	position: relative;
+}
+
+#trio{
+	position: absolute;
+	bottom: 0;
+	max-width: 100%;
+	padding: 0px !important;
+	width: 100%;
+    display:flex !important;
+    justify-content:center !important;
+    align-items:center !important;
+}
+#colorIt{
+    color: #16bbb4;
+}
+#footStyle{
+	height: 5vh;
+}
+#bottomBox{
+    margin-left: 100px;
+    margin-bottom: 100px;
+    margin-right: 100px;
+}
+#fullName{
+    color: #251717;
+}
+#pro1, #pro2, #pro3, #pro4, #pro5{
+    visibility: hidden;
+}
+/***********/
+/* MISC End*/
+/***********/
+
+
+/***********/
+/*  Hover  */
+/**********/
 .cardProjectImage:hover{
 	opacity: 1.1;
 }
@@ -219,145 +285,30 @@ body {
 .fa-award:hover{
 	opacity: .5;
 }
-/*Hover CSS End*/
+/**************/
+/* Hover End */
+/*************/
 
-.projectBoxes11{
-	background-image: url("https://i.imgur.com/TbSBWFc.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-
+/*****************/
+/* Project Boxes */
+/*****************/
+.cardProjectImage{
+	opacity: .65;
+}
+.card{
+	height: 100% !important;
 }
 
-.projectBoxes12{
-	background-image: url("https://i.imgur.com/K6k3Gzw.png");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-
+.card-img-top{
+	height: 280px;
 }
+/*********************/
+/* Project Boxes End */
+/*********************/
 
-.projectBoxes13{
-	background-image: url("https://i.imgur.com/5VNuEgk.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-}
-
-.projectBoxes14{
-	background-image: url("https://i.imgur.com/zn9s9s7.jpg");
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-}
-
-.projectBoxes21{
-	background-color: #f2f2f2;
-
-}
-
-.projectBoxes22{
-	background-color: #f2f2f2;
-}
-
-.projectBoxes23{
-	background-color: #f2f2f2;
-
-}
-
-.projectBoxes24{
-	background-color: #f2f2f2;
-
-}
-
-.projectBoxes31{
-	background-color: #f2f2f2;
-
-}
-
-.projectBoxes32{
-	background-color: #f2f2f2;
-
-}
-
-.projectBoxes33{
-	background-color: #f2f2f2;
-
-}
-
-#pro1, #pro2, #pro3, #pro4, #pro5{
-    visibility: hidden;
-}
-
-.shadowText{
-    text-shadow: #000 0px 0px 10px;
-}
-
-.shadowTextSM{
-    text-shadow: #000 0px 0px 5px;
-}
-
-.progressPercent{
-    margin-left: 10px;
-    color: #16bbb4;
-    font-family: 'Neuton', serif;
-}
-
-.projectBoxes34{
-	background-color: #f2f2f2;
-
-}
-
-.vertical-center {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-.bottom-center {
-    margin: 0;
-    position: absolute;
-    top: 100%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-}
-
-.paraText{
-	font-family: 'Ubuntu', sans-serif;
-	color: #4c4c4c;
-}
-
-.projParaText{
-	font-family: 'Ubuntu', sans-serif;
-    margin-left: 42%;
-    margin-bottom: 10px;
-	color: #FFF;
-}
-
-.profParaText{
-    font-family: 'Ubuntu', sans-serif;
-    color: #FFF;
-}
-
-.paraTextGH{
-	font-family: 'Ubuntu', sans-serif;
-	color: #637ee8;
-}
-
-.dateRange{
-	font-family: 'Cinzel', serif;
-}
-.footStyle{
-	height: 5vh;
-}
-
-.contactIcon{
-	font-size: 2vh;
-	padding-left: 1vh;
-	padding-right: 1vh;
-}
-
+/*********/
+/* Modal */
+/*********/
 .modal_box{
     position:absolute;top:20%;left:20%;
     height:50px;width:30%;
@@ -418,7 +369,32 @@ body {
   text-align: right;
   cursor: pointer;
 }
+.modal-trigger, button {
+  top: 50%;
+  left: 50%;
+  padding: 20px 40px;
+  background: transparent;
+  color: #ffffff;
+  border: 1px solid #ffffff;
+  text-decoration: none;
+}
 
+.modal-trigger {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  -o-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+  transition: ease .2s;
+}
+button.close-modal {
+  border: 1px solid #333333;
+  outline: none;
+  color: #333333;
+  margin-top: 1vh;
+}
 /* Animation */
 /* allows modal to fall down from top of screen*/
 @-webkit-keyframes modalbox {
@@ -443,85 +419,16 @@ body {
   }
 }
 
-/* Aditional Styles */
-.list-inline{
-    margin: 0;
-    font-size: 11px;
-}
-#colorIt{
-    color: #16bbb4;
-}
-.subHeader{
-    font-size: 28px;
-    margin-left: 8px;
-}
-.modal-trigger, button {
-  top: 50%;
-  left: 50%;
-  padding: 20px 40px;
-  background: transparent;
-  color: #ffffff;
-  border: 1px solid #ffffff;
-  text-decoration: none;
-}
+/************/
+/* Modal End*/
+/************/
 
-.modal-trigger {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  -o-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  transition: ease .2s;
-}
-
-.ubuntuFont{
-    font-family: 'Ubuntu', sans-serif;
-}
-
-.topCoverText{
-    margin-top: -258px;
-}
-
-button.close-modal {
-  border: 1px solid #333333;
-  outline: none;
-  color: #333333;
-  margin-top: 1vh;
-}
-
-.trioIcon{
-	 display:flex !important;
-	 justify-content:center !important;
-	 align-items:center !important;
-}
-
-#sectionSkillBar{
-	position: relative;
-}
-
-#trio{
-	position: absolute;
-	bottom: 0;
-	max-width: 100%;
-	padding: 0px !important;
-	width: 100%;
-}
-
-.card{
-	height: 100% !important;
-}
-
-.card-img-top{
-	height: 280px;
-}
-/*Modal CSS End*/
-/*End Font and Styling*/
+/******************/
+/*Responsive Media*/
+/******************/
 .mobileParallax{
 	display: none !important;
 }
-/*responsive media*/
 @media screen /*Iphone XS MAx */
     and (max-width : 414px) {
 		.projectModalHeaders{
@@ -547,7 +454,7 @@ button.close-modal {
 		.cardProjectImage{
 			opacity: 1;
 		}
-		.parallaxCover {
+		.parallaxTop {
 		    /* Reset All for mobile */
 			background-image: none;
 			background-size: auto auto;
@@ -568,7 +475,7 @@ button.close-modal {
 			min-height: 105vh;
 		}
 
-		.parallaxCover:after {
+		.parallaxTop:after {
 			content:"";
 			position:fixed; /* stretch a fixed position to the whole screen */
 			top:0;
@@ -627,8 +534,6 @@ button.close-modal {
 		}
 }
 
-/*responsive media end*/
-
-/*********************************************/
-/*End Site Revamp
-/*********************************************/
+/************************/
+/* Responsive Media End */
+/************************/
